--- a/SimpleIntegratedDB/SimpleIntegratedDB.csproj
+++ b/SimpleIntegratedDB/SimpleIntegratedDB.csproj
@@ -4,10 +4,20 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Coderix.SIDB</PackageId>
+    <Description>Simple Integrated Database</Description>
+    <Version>1.0.0</Version>
+    <Authors>Coderix Cyan</Authors>
+    <Company>Cyan Developers</Company>
+    <PackageTags>Simple, Integrated, Database</PackageTags>
+    <RepositoryUrl>https://github.com/cyancoderix/SIDB</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.JSON" Version="13.0.3" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
