--- a/src/SimpleIntegratedDB.csproj
+++ b/src/SimpleIntegratedDB.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>Coderix.SIDB</PackageId>
-    <Description>Simple Integrated Database</Description>
+    <PackageId>CyanDevelopers.SIDB</PackageId>
+    <Title>Simple Integrated Database</Title>
+    <Description>No need of SQL database.</Description>
     <Version>1.0.0</Version>
     <Authors>Coderix Cyan</Authors>
     <Company>Cyan Developers</Company>
@@ -16,8 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
     <PackageReference Include="Newtonsoft.JSON" Version="13.0.3" />
-    <None Include="README.md" Pack="true" PackagePath="\"/>
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
