--- a/src/SimpleIntegratedDB.csproj
+++ b/src/SimpleIntegratedDB.csproj
@@ -7,19 +7,22 @@
     <PackageId>CyanDevelopers.SIDB</PackageId>
     <Title>Simple Integrated Database</Title>
     <Description>No need of SQL database.</Description>
-    <Version>1.0.0</Version>
+    <Version>0.1.0-alpha</Version>
     <Authors>Coderix Cyan</Authors>
     <Company>Cyan Developers</Company>
     <PackageTags>Simple, Integrated, Database</PackageTags>
     <RepositoryUrl>https://github.com/cyancoderix/SIDB</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
     <PackageReference Include="Newtonsoft.JSON" Version="13.0.3" />
     <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="../assets/icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
 </Project>
