--- a/src/SimpleIntegratedDB.csproj
+++ b/src/SimpleIntegratedDB.csproj
@@ -7,7 +7,7 @@
     <PackageId>CyanDevelopers.SIDB</PackageId>
     <Title>Simple Integrated Database</Title>
     <Description>No need of SQL database.</Description>
-    <Version>0.1.0-alpha</Version>
+    <Version>1.0.0</Version>
     <Authors>Coderix Cyan</Authors>
     <Company>Cyan Developers</Company>
     <PackageTags>Simple, Integrated, Database</PackageTags>
